# macimg

./: .gitignore  README.md  setup.cfg
macimg/: __init__.py  compositions.py  core.py  distortions.py  filters.py  generators.py  transforms.py
