[metadata]
name = macimg
version = 0.0.3
author = Stephen Kaplan
author_email = stephen.kaplan@maine.edu
description = A package for manipulating images using Objective-C frameworks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SKaplanOfficial/macimg
project_urls =
    Bug Tracker = https://github.com/SKaplanOfficial/macimg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    pyobjc-core ~= 9.0
    pyobjc-framework-Quartz ~= 9.0
